--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#10b981",
-  "orientation": "landscape-primary",
+  "orientation": "portrait-primary",
   "icons": [
     {
       "src": "/ikonica192x192.png",
