--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
+    "next-auth": "^4.24.13",
     "nodemailer": "^7.0.6",
     "prisma": "^6.15.0",
     "react": "19.1.0",
